--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "export": "slidev export"
   },
   "dependencies": {
-    "@slidev/cli": "^0.36.5",
+    "@slidev/cli": "^0.38.5",
     "@slidev/theme-default": "*",
     "@slidev/theme-seriph": "*",
     "slidev-theme-penguin": "^1.4.1",
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@iconify-json/logos": "^1.1.17",
+    "@iconify-json/mdi": "^1.1.44",
     "@iconify-json/twemoji": "^1.1.5",
     "@slidev/types": "^0.36.6",
     "playwright-chromium": "^1.27.1",
